@@ -1,3 +1,7 @@
+2019-12-17  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Add a Python mapping of the findFile() function.
+
 2019-09-04  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Add convenience accessor attributes to PDFUncertainty in Python.
